2004-11-17  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-emac.c (emac_read_mac): Fixed the EEPROM
	code.

	* src/lib/dump.c (dump): Correct bug offset to rgb.

2004-11-16  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-emac.c (cmd_emac): Ethernet MAC maintenance
	function as well as interface initialization.

	* src/lib/dump.c (dump): Factored the dump code into a library
	function.

2004-11-15  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-nor.c (nor_write): Implementing buffered
	write.  It's about 16 times as fast.  Will leave other code for
	the time being since it is smaller by about 260 bytes.

	* First release, 1.0.
