@@ -39,6 +39,7 @@ CONFIG_ARCH_NUMBER=609
 #CONFIG_DRIVER_NAND=y
 #CONFIG_DRIVER_NOR=y
 #CONFIG_RELOCATE_NAND=y
+CONFIG_DRIVER_CPLD_SPI=y
 CONFIG_DRIVER_EMAC=y
 
 CONFIG_NAND_LPD=y
