@@ -1,7 +1,11 @@
 2004-11-17  Marc Singer  <elf@buici.com>
 
+	* src/mach-lh7952x/drv-cpld-spi.c: Added cpld-spi drivers for
+	configuration EEPROM and for the MAC EEPROM.
+
 	* src/mach-lh7952x/drv-emac.c (emac_read_mac): Fixed the EEPROM
 	code.
+	(cmd_emac): Removed eeprom specifics into another driver.
 
 	* src/lib/dump.c (dump): Correct bug offset to rgb.
 
